-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: jfx25
-
Component/s: javafx
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8352729 | jfx24.0.2 | Jay Bhaskar | P2 | Resolved | Fixed | b01 |
| JDK-8352899 | jfx24.0.1 | Kevin Rushforth | P2 | Resolved | Fixed | b04 |
| JDK-8378829 | jfx21.0.11 | Johan Vos | P2 | Resolved | Fixed | b01 |
| JDK-8376309 | jfx17.0.19 | Johan Vos | P2 | Resolved | Fixed | b01 |
- backported by
-
JDK-8352729 Canvas pattern test fails and crashes on WebKit 620.1
-
- Resolved
-
-
JDK-8352899 Canvas pattern test fails and crashes on WebKit 620.1
-
- Resolved
-
-
JDK-8376309 Canvas pattern test fails and crashes on WebKit 620.1
-
- Resolved
-
-
JDK-8378829 Canvas pattern test fails and crashes on WebKit 620.1
-
- Resolved
-
- caused by
-
JDK-8340322 Update WebKit to 620.1
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jfx17u/fa350eb6
-
Commit(master)
openjdk/jfx21u/67abe3bf
-
Commit(master)
openjdk/jfx24u/1ea359be
-
Commit(master)
openjdk/jfx/fd099a7f
-
Review(master)
openjdk/jfx17u/250
-
Review(master)
openjdk/jfx21u/112
-
Review(master)
openjdk/jfx24u/16
-
Review(master)
openjdk/jfx/1734
-
Review(master)
openjdk/jfx/1740