8347937: Canvas pattern test fails on WebKit 620.1