modules/javafx.web/src/test/java/test/javafx/scene/web/CanvasTest.java
@@ -121,7 +121,6 @@ public class CanvasTest extends TestBase {
     }
 
     // JDK-8234471
-    @Disabled("JDK-8347937")
     @Test public void testCanvasPattern() throws Exception {
         final String htmlCanvasContent = "\n"
             + "<canvas id='canvaspattern' width='100' height='100'></canvas>\n"
